--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.4.10",
+    "motion": "^12.4.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
