--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
     "rehype-starry-night": "^2.2.0",
     "remark-gfm": "^4.0.1"
   },
